syntax = "proto3";
package org.opendedup.grpc;
option go_package = "github.com/opendedup/sdfs-client-go/sdfs/;sdfs";
//option java_multiple_files = true;
import "FileInfo.proto";

// Request payload
message ShutdownRequest {
    int64 pvolumeID =1;

}

message ShutdownResponse {
    string error = 1;
    errorCodes errorCode =4;
}
